--- a/templates/grids/bulk/archived.html.twig
+++ b/templates/grids/bulk/archived.html.twig
@@ -3,6 +3,6 @@
 <form action="{{ url }}" method="post">
     <button class="ui icon button" type="button" archived-mass-action data-url="{{ url('app_archived_product') }}" >
         <input type="hidden">
-        <i class="icon  list"></i>  {{ "sylius.ui.archived" |trans }}
+        <i class="icon  archive"></i>  {{ "sylius.ui.archived" |trans }}
     </button>
 </form>
